--- a/punto-de-venta-autobuses/src/app/autobus/autobus.component.css
+++ b/punto-de-venta-autobuses/src/app/autobus/autobus.component.css
@@ -25,8 +25,20 @@
   }
 
 
-.autobus{
-  background-image: url('../../assets/autobus.png');
-  height: 320px;
-  width: 792px;
+.styles{
+  border-color: black;
+  border: black;
+  border-style: solid;
+  border-radius: 10px;
+  padding: 10px;
+  background-color:  #d5d8dc;
+}
+
+.styles2{
+  border-color: black;
+  border: black;
+  border-style: solid;
+  border-radius: 10px;
+  padding: 10px;
+  background-color:   #f8f0ee;
 }
